--- a/src/Styles/Cards.css
+++ b/src/Styles/Cards.css
@@ -8,9 +8,16 @@ h1 {
 }
 
 .cards__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   max-width: 1120px;
   width: 90%;
   margin: 0 auto;
@@ -26,17 +33,27 @@ h1 {
 }
 
 .cards__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   margin: 0 1rem;
   border-radius: 10px;
 }
 
 .cards__item__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
   width: 100%;
-  box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
+  -webkit-box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
+          box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
   -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
   filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
   border-radius: 10px;
@@ -52,8 +69,10 @@ h1 {
 }
 
 .fade-img {
-  animation-name: fade-img;
-  animation-duration: 2s;
+  -webkit-animation-name: fade-img;
+          animation-name: fade-img;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
 }
 
 .cards__item__pic-wrap::after {
@@ -67,7 +86,8 @@ h1 {
   font-weight: 700;
   color: #fff;
   background-color: #1f98f4;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .cards__item__img {
@@ -81,12 +101,15 @@ h1 {
   max-width: 100%;
   height: 100%;
   max-height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: all 0.2s linear;
   transition: all 0.2s linear;
 }
 
 .cards__item__img:hover {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .cards__item__info {
@@ -107,6 +130,8 @@ h1 {
 
 @media only screen and (min-width: 1024px) {
   .cards__items {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
 }
