--- a/src/Styles/HeroSection.css
+++ b/src/Styles/HeroSection.css
@@ -1,5 +1,6 @@
 video {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -7,15 +8,25 @@ video {
 }
 
 .hero-container {
-
   height: 100vh;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
-  object-fit: contain;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+          box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .hero-container > h1 {
@@ -29,7 +40,7 @@ video {
   color: #fff;
   font-size: 32px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+ 'Lucida Sans', Arial, sans-serif;
 }
 
 .hero-btns {
@@ -56,17 +67,13 @@ video {
     font-size: 50px;
     margin-top: -100px;
   }
-
   .hero-container > p {
     font-size: 30px;
   }
-
   .btn-mobile {
     display: block;
     text-decoration: none;
-
   }
-
   .btn {
     width: 100%;
   }
