--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,19 +1,33 @@
 .navbar {
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  background: -webkit-gradient(linear, left top, right top, from(#1c1b1b), to(#1a1717));
+  background: linear-gradient(90deg, #1c1b1b 0%, #1a1717 100%);
   height: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 1.2rem;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 999;
 }
 
 .navbar-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 80px;
   max-width: 1500px;
 }
@@ -25,8 +39,12 @@
   cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .fa-typo3 {
@@ -35,13 +53,17 @@
 }
 
 .nav-menu {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  -ms-grid-columns: (auto)[4];
+      grid-template-columns: repeat(4, auto);
   grid-gap: 10px;
   list-style: none;
   text-align: center;
   width: 60vw;
-  justify-content: end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
   margin-right: 2rem;
 }
 
@@ -51,8 +73,12 @@
 
 .nav-links {
   color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-decoration: none;
   padding: 0.5rem 1rem;
   height: 100%;
@@ -60,6 +86,7 @@
 
 .nav-links:hover {
   border-bottom: 4px solid #fff;
+  -webkit-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
 
@@ -79,62 +106,63 @@
   .NavbarItems {
     position: relative;
   }
-
   .nav-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 100%;
     height: 90vh;
     position: absolute;
     top: 80px;
     left: -100%;
     opacity: 1;
+    -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
   }
-
   .nav-menu.active {
     background: #242222;
     left: 0;
     opacity: 1;
+    -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
     z-index: 1;
   }
-
   .nav-links {
     text-align: center;
     padding: 2rem;
     width: 100%;
     display: table;
   }
-
   .nav-links:hover {
-    background-color: rgb(134, 94, 94);
+    background-color: #865e5e;
     color: #242424;
     border-radius: 0;
   }
-
   .navbar-logo {
     position: absolute;
     top: 0;
     left: 0;
-    transform: translate(25%, 50%);
+    -webkit-transform: translate(25%, 50%);
+            transform: translate(25%, 50%);
   }
-
   .menu-icon {
     display: block;
     position: absolute;
     top: 0;
     right: 0;
-    transform: translate(-100%, 60%);
+    -webkit-transform: translate(-100%, 60%);
+            transform: translate(-100%, 60%);
     font-size: 1.8rem;
     cursor: pointer;
   }
-
   .fa-times {
     color: #fff;
     font-size: 2rem;
   }
-
   .nav-links-mobile {
     display: block;
     text-align: center;
@@ -147,12 +175,13 @@
     color: #fff;
     padding: 14px 20px;
     border: 1px solid #fff;
+    -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
   }
-
   .nav-links-mobile:hover {
     background: #fff;
     color: #242424;
+    -webkit-transition: 250ms;
     transition: 250ms;
   }
 }
