--- a/src/Styles/Budget.css
+++ b/src/Styles/Budget.css
@@ -62,9 +62,9 @@ html {
 }
 /*BALANCE TEXT*/
 .balance h2 {
-  font-family: "Baloo Da 2", serif;
+  -family: "Baloo Da 2", serif;
   font-size: 6rem;
-  font-weight: 300;
+  font-weight:font 300;
   text-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
 }
 /*BALANCE VALUE*/
