--- a/src/Styles/todolist_input.css
+++ b/src/Styles/todolist_input.css
@@ -5,6 +5,7 @@
 }
 
 .input__box {
+  
 
   width: 100%;
   border-radius: 38px;
@@ -50,6 +51,7 @@
   justify-content: space-evenly;
   width: 100%;
   flex-wrap: wrap;
+  align-items: center;
  
 }
 
@@ -58,8 +60,19 @@
   width: 29.5%;
   border-radius: 5px;
   padding: 20px;
-  margin-top: 15px;
-  background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
+  margin-top: 55px;
+
+
+  color: white;
+
+  background: #1DA1F2;
+  height: auto;
+
+
+  font-weight: 900;
+  box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px white;
+
+  ;
 }
 .todos__single--text {
   flex: 1;
@@ -73,10 +86,19 @@
   outline: none;
 }
 
-.icon {
+.todo-icon {
   margin-left: 15px;
   font-size: 25px;
   cursor: pointer;
+}
+.edit-icon{
+  color:yellow;
+}
+.delete-icon{
+  color:rgba(255, 0, 0, 0.582);
+}
+.accept-icon{
+  color:green;
 }
 
 @media (max-width: 1200px) {
