--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background: -webkit-gradient(linear, left top, right top, from(#1c1b1b), to(#1a1717));
+  background: (linear, left top, right top, from(#1c1b1b), to(#1a1717));
   background: linear-gradient(90deg, #1c1b1b 0%, #1a1717 100%);
   height: 80px;
   display: -webkit-box;
