--- a/src/Styles/Weather.css
+++ b/src/Styles/Weather.css
@@ -1,60 +1,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-/*
-* {
-  box-sizing: border-box;
-  margin: 50;
-  padding: 0;
-}
-*/
-
-
-p {
-  font-size: 1.3rem;
-}
-
 
 .app {
-  width: 100%;
-  height: 120vh;
-  position: sticky;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh; 
+    padding: 1rem 0.5rem;
+    font-family: 'Nunito', sans-serif;
+    font-size: 30px;
+    background: url('..//assets/images/weather.jpg') no-repeat center center/cover;
+    
+
 }
 
-.app:before {
-  content: '';
-  background: url('..//assets/images/weather.jpg') no-repeat center center/cover;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
+.temp{
+  font-size: 40px;
 }
 
-.app .search {
+.location{
+  
   text-align: center;
-  padding: 5rem;
-}
+  width: 100%;
+  margin-top: 3rem;
+  padding: 1rem;
+  border-radius: 12px;
+  background-color: rgba(1, 141, 241, 0.2);;
+  
 
+}
 .app input {
+
   padding: 1rem 1.5rem;
-  font-size: 1.2rem;
-  border-radius: 38px;
+  font-size: 3rem;
+  border-radius: 10px;
   border: .075px solid rgba(255,255,255, 0.8);
-  background: rgba(255,255,255, 0.1);
-  color: #f8f8f8;
+  background: rgba(3, 63, 245, 0.1);
+  color: #45424c;
 }
 
 ::placeholder {
   color: #f8f8f8;
   
 }
-
 .container {
   max-width: 700px;
-  height: 150px;
-  margin: auto;
+
+  margin-top: 25px;
   padding: 0 1rem;
   position: relative;
   /*top: 1%;*/
@@ -67,25 +61,25 @@ p {
 .app .left {
   text-align: center;
   width: 100%;
-  margin: .1rem auto;
-  background-color: rgba(255,255,255, 0.2);
-  padding: 1rem;
+  margin-top: 20px ;
+  background-color: rgba(1, 141, 241, 0.2);
+  padding: 3rem;
 }
 
-.app .right {
-  display: flex;
-  justify-content: space-evenly;
+
+
+.bottom{
   text-align: center;
   width: 100%;
-  margin: 1rem auto;
+
+  margin: 5rem auto;
+  margin-top: 5px;
+  background-color: rgba(1, 141, 241, 0.2);
   padding: 1rem;
-  border-radius: 12px;
-  background-color: rgba(255,255,255, 0.2);
 }
 
-.bold {
-  font-weight: 700;
-}
+
+
 
 
 
